October 9, 2021 pitbox46
-Added option to add visual only world border via condition's start function. Useful for area events
-Fixed bug where event wouldn't stop if the timer went off and the function didn't return winners
-Fixed a performance issue where sending a global message would create a new FakePlayer every invocation

October 8, 2021 pitbox46
-Added entityName and entityID to both 'kill_entity' and 'damage_entity'
-Tick events now only check every second to avoid performance issues

October 7, 2021 pitbox46
-Timer event bug fixed

October 6, 2021 pitbox46
-Scoreboard now works
-Fixed issue with parameters for area_check

October 5, 2021 pitbox46
-Fixed bug with returning winners on a timed event

October 4, 2021 pitbox46
-Better error logging/error handling
-Timed events now work
-Localization for winner message
-Calling get on the registered event map will now return a copy of the event so objects don't get shared between multiple instances of the same event.

October 4, 2021 pitbox46
-Fixed issue with forceStart command
-Updated example Events.js because Nashorn doesn't include the newest JavaScript features
-Added "broadcast_message" optional return element to functions

October 2, 2021 pitbox46
-Most errors now stop the event rather than potentially crashing the game
-Added ability to start specific script
-Added force reload command