@@ -5,7 +5,10 @@ import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.mojang.brigadier.StringReader;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import github.pitbox46.eventz.Eventz;
+import github.pitbox46.eventz.EventzScriptException;
 import github.pitbox46.eventz.EventzScriptLoadingException;
+import jdk.nashorn.api.scripting.JSObject;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.JsonToNBT;
 import org.apache.logging.log4j.LogManager;
@@ -32,6 +35,9 @@ public class Event {
     public final Type type;
     public final List<EventGate> gates;
 
+    public final JSObject defaultObject;
+    public JSObject globalData;
+
     public Event(String name, String title, String description, String startMethod, int winners, long duration, long monetaReward, ItemStack itemReward, Type type, List<EventGate> gates) {
         this.name = name;
         this.title = title;
@@ -43,23 +49,30 @@ public class Event {
         this.itemReward = itemReward;
         this.type = type;
         this.gates = gates;
+
+        defaultObject = Eventz.getDefaultObject("getDefaultEventObject");
+        globalData = (JSObject) defaultObject.getMember("global_data");
     }
 
     public Event clone() {
         return new Event(name, title, description, startMethod, winners, duration, monetaReward, itemReward, type, gates.stream().map(EventGate::clone).collect(Collectors.toList()));
     }
 
-    public void startScript() {
+    public void startScript() throws EventzScriptException {
         if(!startMethod.isEmpty()) {
             String[] scriptFunctionPair = startMethod.split("#");
             if(scriptFunctionPair.length != 2)
-                throw new RuntimeException(String.format("Start method for event %s is not in the form \"scriptName.js#functionName\"", name));
+                throw new RuntimeException(String.format("Start function for event %s is not in the form \"scriptName.js#functionName\"", name));
             CompiledScript script = EventRegistration.SCRIPTS.get(scriptFunctionPair[0]);
             try {
+                script.eval();
                 Object returnValue = ((Invocable) script.getEngine()).invokeFunction(scriptFunctionPair[1]);
-                //TODO this
+                if (returnValue instanceof JSObject) {
+                    JSObject startObject = (JSObject) returnValue;
+                    globalData.setMember("start_data", startObject);
+                }
             } catch (ScriptException | NoSuchMethodException e) {
-                e.printStackTrace();
+                throw new EventzScriptException("Some error occurred with starting the condition ", e);
             }
         }
     }
@@ -79,8 +92,8 @@ public class Event {
                 itemReward = ItemStack.read(new JsonToNBT(new StringReader(jsonObject.get("item_reward").getAsString())).readStruct());
             JsonArray jsonArray = jsonObject.get("gates").getAsJsonArray();
             ArrayList<EventGate> gates = new ArrayList<>();
-            for(JsonElement jsonElement : jsonArray) {
-                gates.add(EventGate.readEventGate(jsonElement.getAsJsonObject()));
+            for(int i = 0; i < jsonArray.size(); i++) {
+                gates.add(EventGate.readEventGate(jsonArray.get(i).getAsJsonObject(), i));
             }
             return new Event(name, title, description, startMethod, winners, duration, monetaReward, itemReward, type, gates);
         } catch (UnsupportedOperationException | CommandSyntaxException | EventzScriptLoadingException e) {
